# bmd5302-project

./: .env.example  .gitignore  AGENTS.md  LICENSE  Model.xlsm  PLAN.md  README.md  Test.xlsm  excel_workbook_support.py  main.py  mcp.sh  mcp_server.py  model_workflow.ipynb  model_workflow.py  normal_test_workflow.ipynb  normal_test_workflow.py  pyproject.toml  sandra_chat_mcp.sh  sandra_chat_server.py
mcp_app/: mcp-app.html  package-lock.json  package.json  tsconfig.json  vite.config.js
mcp_app/src/: sandra-app.css  sandra-app.ts
sandra_kb/: README.md  methodology.md  sandra_preprompt.md  tone_guide.md
skills/bmd5302-robo-advisor/: SKILL.md
skills/bmd5302-robo-advisor/agents/: openai.yaml
skills/bmd5302-robo-advisor/references/: report-context.md  tool-contract.md
